add some reference and change the bib file

--- a/proposal-template/proposal-template.tex
+++ b/proposal-template/proposal-template.tex
@@ -231,7 +231,7 @@ acknowledgments in the anonymized submission, only in the final paper.
 %modulation in rat hippocampal region CA3. {\it Journal of
 %  Neuroscience} {\bf 15}(7):5249-5262.
 %123~\cite{Bolte:2006:LIN:1328019.1328299},\cite{banerjee2007generalized}\cite{zhangcs14}\cite{shalev2016sdca}\cite{yang2013trading}
-123~\cite{Shalev-Shwartz2016a}
+123~\cite{Shalev-Shwartz2016a} is a good approach
 \bibliography{courseProject}
 \bibliographystyle{abbrv}
 \end{document}
