added some reference for stochastic optimization

--- a/proposal-template/courseProject.bib
+++ b/proposal-template/courseProject.bib
@@ -322,3 +322,94 @@ title = {{HOGWILD!: A Lock-Free Approach to Parallelizing Stochastic Gradient De
 url = {http://arxiv.org/abs/1106.5730},
 year = {2011}
 }
+@article{shalev2013stochastic,
+	title={Stochastic dual coordinate ascent methods for regularized loss minimization},
+	author={Shalev-Shwartz, Shai and Zhang, Tong},
+	journal={Journal of Machine Learning Research},
+	volume={14},
+	number={Feb},
+	pages={567--599},
+	year={2013}
+}
+@inproceedings{johnson2013accelerating,
+	title={Accelerating stochastic gradient descent using predictive variance reduction},
+	author={Johnson, Rie and Zhang, Tong},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={315--323},
+	year={2013}
+}
+@article{boyd2011distributed,
+	title={Distributed optimization and statistical learning via the alternating direction method of multipliers},
+	author={Boyd, Stephen and Parikh, Neal and Chu, Eric and Peleato, Borja and Eckstein, Jonathan},
+	journal={Foundations and Trends{\textregistered} in Machine Learning},
+	volume={3},
+	number={1},
+	pages={1--122},
+	year={2011},
+	publisher={Now Publishers Inc.}
+}
+@incollection{bottou2010large,
+	title={Large-scale machine learning with stochastic gradient descent},
+	author={Bottou, L{\'e}on},
+	booktitle={Proceedings of COMPSTAT'2010},
+	pages={177--186},
+	year={2010},
+	publisher={Springer}
+}
+@inproceedings{defazio2014saga,
+	title={Saga: A fast incremental gradient method with support for non-strongly convex composite objectives},
+	author={Defazio, Aaron and Bach, Francis and Lacoste-Julien, Simon},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={1646--1654},
+	year={2014}
+}
+@article{allen2016katyusha,
+	title={Katyusha: Accelerated variance reduction for faster SGD},
+	author={Allen-Zhu, Zeyuan},
+	journal={ArXiv e-prints, abs/1603.05953},
+	year={2016}
+}
+@article{lan2015optimal,
+	title={An optimal randomized incremental gradient method},
+	author={Lan, Guanghui and Zhou, Yi},
+	journal={arXiv preprint arXiv:1507.02000},
+	year={2015}
+}
+@inproceedings{zhang2015stochastic,
+	title={Stochastic Primal-Dual Coordinate Method for Regularized Empirical Risk Minimization.},
+	author={Zhang, Yuchen and Lin, Xiao},
+	booktitle={ICML},
+	pages={353--361},
+	year={2015}
+}
+@inproceedings{lin2014accelerated,
+	title={An accelerated proximal coordinate gradient method},
+	author={Lin, Qihang and Lu, Zhaosong and Xiao, Lin},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={3059--3067},
+	year={2014}
+}
+@inproceedings{shalev2014accelerated,
+	title={Accelerated proximal stochastic dual coordinate ascent for regularized loss minimization.},
+	author={Shalev-Shwartz, Shai and Zhang, Tong},
+	booktitle={ICML},
+	pages={64--72},
+	year={2014}
+}
+@article{xiao2014proximal,
+	title={A proximal stochastic gradient method with progressive variance reduction},
+	author={Xiao, Lin and Zhang, Tong},
+	journal={SIAM Journal on Optimization},
+	volume={24},
+	number={4},
+	pages={2057--2075},
+	year={2014},
+	publisher={SIAM}
+}
+@inproceedings{shalev2013accelerated,
+	title={Accelerated mini-batch stochastic dual coordinate ascent},
+	author={Shalev-Shwartz, Shai and Zhang, Tong},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={378--385},
+	year={2013}
+}
