--- a/tex/proposal-template/courseProject.bib
+++ b/tex/proposal-template/courseProject.bib
@@ -413,3 +413,60 @@ year = {2011}
 	pages={378--385},
 	year={2013}
 }
+@article{ouyang2013stochastic,
+	title={Stochastic Alternating Direction Method of Multipliers.},
+	author={Ouyang, Hua and He, Niao and Tran, Long and Gray, Alexander G},
+	journal={ICML (1)},
+	volume={28},
+	pages={80--88},
+	year={2013}
+}
+@inproceedings{suzuki2013dual,
+	title={Dual Averaging and Proximal Gradient Descent for Online Alternating Direction Multiplier Method.},
+	author={Suzuki, Taiji and others},
+	booktitle={ICML (1)},
+	pages={392--400},
+	year={2013}
+}
+@inproceedings{recht2011hogwild,
+	title={Hogwild: A lock-free approach to parallelizing stochastic gradient descent},
+	author={Recht, Benjamin and Re, Christopher and Wright, Stephen and Niu, Feng},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={693--701},
+	year={2011}
+}
+@inproceedings{zinkevich2010parallelized,
+	title={Parallelized stochastic gradient descent},
+	author={Zinkevich, Martin and Weimer, Markus and Li, Lihong and Smola, Alex J},
+	booktitle={Advances in neural information processing systems},
+	pages={2595--2603},
+	year={2010}
+}
+@inproceedings{yang2013trading,
+	title={Trading computation for communication: Distributed stochastic dual coordinate ascent},
+	author={Yang, Tianbao},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={629--637},
+	year={2013}
+}
+@inproceedings{zhang2014asynchronous,
+	title={Asynchronous Distributed ADMM for Consensus Optimization.},
+	author={Zhang, Ruiliang and Kwok, James T},
+	booktitle={ICML},
+	pages={1701--1709},
+	year={2014}
+}
+@inproceedings{roux2012stochastic,
+	title={A stochastic gradient method with an exponential convergence \_rate for finite training sets},
+	author={Roux, Nicolas L and Schmidt, Mark and Bach, Francis R},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={2663--2671},
+	year={2012}
+}
+@inproceedings{defazio2016simple,
+	title={A simple practical accelerated method for finite sums},
+	author={Defazio, Aaron},
+	booktitle={Advances In Neural Information Processing Systems},
+	pages={676--684},
+	year={2016}
+}
