--- a/tex/proposal-template/proposal-template.tex
+++ b/tex/proposal-template/proposal-template.tex
@@ -241,7 +241,7 @@ In this paper, we consider a class of convex optimization problems with special 
 \end{equation}
 where $w\in\R^d$ denotes the weight vector, $(x_i,y_i),x_i\in\R^d,y_i\in\R$, $i=1,\ldots,n$ are training data, $\lambda>0$ is a regularization parameter, $\phi(z,y)$ is a convex function of $z$, and $g(w)$ is a convex function of $w$. We refer to the problem in (\ref{RLM}) as Regularized Finite Sum Minimization (RFSM) problem. When $g(w)=0$, the problem reduces to the Finite Sum Minimization (FSM) problem.
 
-Both RFSM and FSM problems have been extensively studied in machine learning and optimization literature. When $n$ is large, numerous stochastic optimization algorithms were proposed\cite{bottou2010large,nemirovski2009robust,shalev2013stochastic,shalev2013accelerated,johnson2013accelerating,shalev2014accelerated,xiao2014proximal,defazio2014saga,zhang2015stochastic,lin2014accelerated,allen2016katyusha,lan2015optimal}.  
+Both RFSM and FSM problems have been extensively studied in machine learning and optimization literature. When $n$ is large, numerous sequential stochastic optimization algorithms were proposed\cite{bottou2010large,roux2012stochastic,nemirovski2009robust,shalev2013stochastic,shalev2013accelerated,johnson2013accelerating,ouyang2013stochastic, suzuki2013dual,shalev2014accelerated,xiao2014proximal,defazio2014saga,zhang2015stochastic,lin2014accelerated,defazio2016simple,allen2016katyusha,lan2015optimal}, and there also exist several parallel or distributed stochastic algorithms\cite{boyd2011distributed,recht2011hogwild,zinkevich2010parallelized,yang2013trading,zhang2014asynchronous}. Specifically, S. Shalv-Shwartz and T. Zhang \cite{shalev2013stochastic} proposed an Stochastic Dual Coordinate Ascent (SDCA) which provided strongly theoretical guarantee regarding the duality gap. T. Yang \cite{yang2013trading} developed a Distributed Stochastic Dual Coordinate Ascent (DisDCA) algorithm and its practical variant, and analyzed the tradeoff between communication and computation. However, to get a more efficient distributed SDCA is a open problem. In this paper, we first provide a GPU implementation of the vanilla distributed SDCA, and then give an asynchronous distributed SDCA to make full use of computational resources. 
 \section{Related Work}
 \label{gen_inst}
 Are there any related work? If yes, review them and discuss their deficiencies and how your proposed work can potentially address their issues.  
