--- a/tex/proposal-template/proposal-template.tex
+++ b/tex/proposal-template/proposal-template.tex
@@ -245,7 +245,7 @@ Both RFSM and FSM problems have been extensively studied in machine learning and
 \section{Related Work}
 \label{gen_inst}
 %Are there any related work? If yes, review them and discuss their deficiencies and how your proposed work can potentially address their issues.  
-First we review the related work of sequential stochastic convex optimization for solving FSM and RFSM problems. The first numerical scheme of stochastic optimization stems from stochastic gradient descent (SGD)\cite{bottou2010large,nemirovski2009robust}, which was designed to avoid the calculation of full gradient and gets faster convergence than gradient descent (GD). To improve the converge rate of SGD, many new algorithms were proposed by exploiting the finite sum structure, including the Stochastic Average Gradient (SAG)\cite{roux2012stochastic}, Stochastic Dual Coordinate Ascent (SDCA)\cite{shalev2013stochastic}, Stochastic Variance Reduced Gradient (SVRG)\cite{johnson2013accelerating}, Accelerated Proximal Coordinate method (APCG)\cite{lin2014accelerated}  SAGA\cite{Defazio2014}, Prox-SDCA\cite{shalev2014accelerated}, Prox-SVRG\cite{xiao2014proximal}, and Stochastic Primal-dual Coordinate method (SPDC)\cite{zhang2015stochastic}. Recently, the optimal first-order stochastic optimization method were developed\cite{allen2016katyusha,lan2015optimal}. Although there exist rich literature studying sequential stochastic optimization with strong theoretical guarantee, less efforts have been devoted to considering them in a parallel or distributed manner. It constitutes a huge gap between theory and practice, since nowadays the size of data increases at a rapid speed, which makes one-core processor very difficult to handle it properly.
+First we review the related work of sequential stochastic convex optimization for solving FSM and RFSM problems. The first numerical scheme of stochastic optimization stems from stochastic gradient descent (SGD)\cite{bottou2010large,nemirovski2009robust}, which was designed to avoid the calculation of full gradient and gets faster convergence than gradient descent (GD). To improve the converge rate of SGD, many new algorithms were proposed by exploiting the finite sum structure, including the Stochastic Average Gradient (SAG)\cite{roux2012stochastic}, Stochastic Dual Coordinate Ascent (SDCA)\cite{shalev2013stochastic}, Stochastic Variance Reduced Gradient (SVRG)\cite{johnson2013accelerating}, Accelerated Proximal Coordinate method (APCG)\cite{lin2014accelerated},  SAGA\cite{Defazio2014}, Prox-SDCA\cite{shalev2014accelerated}, Prox-SVRG\cite{xiao2014proximal}, and Stochastic Primal-dual Coordinate method (SPDC)\cite{zhang2015stochastic}. Recently, the optimal first-order stochastic optimization method were developed\cite{allen2016katyusha,lan2015optimal}. Although there exist rich literature studying sequential stochastic optimization with strong theoretical guarantee, less efforts have been devoted to considering them in a parallel or distributed manner. It constitutes a huge gap between theory and practice, since nowadays the size of data increases at a rapid speed, which makes one-core processor very difficult to handle it properly.
 
 Now we focus on some related work of distributed optimization.
 
