--- a/tex/proposal-template/proposal-template.tex
+++ b/tex/proposal-template/proposal-template.tex
@@ -312,7 +312,7 @@ of our proposed approach, while on the implementation side we hope to build a
 scalable system that can take advantage of its hardware.
 
 \subsection{Theory}
-The theory part will try to establish the convergence result of the proposed asynchronous distributed SDCA and analyze the tradeoff between computation and asynchronous communication.
+In the theory part we will try to establish the convergence result of the proposed asynchronous distributed SDCA and analyze the tradeoff between computation and asynchronous communication.
 \subsection{Implementation}
 There are two key aspects to the implementation: taking advantage of the GPU and
 working in a distributed setting.
